-
Bug
-
Resolution: Done
-
P2: Important
-
5.4.0
-
None
-
Archlinux, CUPS 2.0.1
-
a4a5e663d6409fc19296c7329bdb0456fa7f54ec
When using the CUPS webinterface (http://localhost:631/) via QtWebKit and entering a wrong password (e.g. via Administration -> Add printer), weird things happen:
- With Firefox, I get another dialog asking me to authenticate, as expected.
- With the example browser, cups uses 100% CPU and nothing happens - this might be a CUPS bug, but I can't trigger it with any other browser
- With the Otter browser, I get an error page saying "Unknown error".
| For Gerrit Dashboard: QTBUG-43628 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 102880,1 | Fix authenticated POST/PUT http requests with buffering disabled | 5.4 | qt/qtbase | Status: ABANDONED | 0 | 0 |
| 102881,2 | Add support authenticated POST requests | 5.4 | qt/qtwebkit | Status: ABANDONED | 0 | 0 |
| 103076,2 | Fix authenticated POST/PUT http requests with buffering disabled | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 103087,2 | Add support authenticated POST requests | dev | qt/qtwebkit | Status: MERGED | +2 | 0 |